--- a/index.html
+++ b/index.html
@@ -13,19 +13,20 @@
 
 <body>
     <header>
-        <!--**the header with the frontend mentor logo-->
+        <!--**the header with my logo-->
         <figure>
-            <a href="index.html"><img src="images/favicon-32x32.png" alt="fronendmentor-logo"></a>
+            <a href="index.html"><img src="images/path1221.png" alt="arbit-design"></a>
         </figure>
     </header>
     <!--**the qr code section-->
     <main>
         <figure><img src="images/image-qr-code.png" alt="qr-code"> </figure>
-        <p>Improve your front-end skills by building projects Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        <h1>Improve your front-end skills by building projects</h1>
+        <p> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </main>
     <!--**the footer with the attribution-->
     <footer class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/Chilanzi-thirt33n">Chilaaanzi</a>.
+        <p><small>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/Chilanzi-thirt33n">Chilaaanzi</a>.</small></p>
     </footer>
 </body>
 
