read me added and structured css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <!-- displays site properly based on user's device -->
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <!--style sheet-->
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/styles/Default.css">
+    <link rel="stylesheet" href="/styles/Mobile-345.css">
+    <link rel="stylesheet" href="/styles/Tablet.css">
+    <link rel="stylesheet" href="/styles/Desktop-1440px.css">
     <title>Frontend Mentor | QR code component</title>
 </head>
 
