--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-     <!-- displays site properly based on user's device -->
+    <!-- displays site properly based on user's device -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--style sheet-->
-    <link rel="stylesheet" href="/styles/Default.css">
-    <link rel="stylesheet" href="/styles/Mobile-345.css">
-    <link rel="stylesheet" href="/styles/Tablet.css">
-    <link rel="stylesheet" href="/styles/Desktop-1440px.css">
+    <link rel="stylesheet" href="/css/Default.css">
+    <link rel="stylesheet" href="/css/Mobile-345.css">
+    <link rel="stylesheet" href="/css/Tablet.css">
+    <link rel="stylesheet" href="/css/Desktop-1440px.css">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <title>Frontend Mentor | QR code component</title>
 </head>
